--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(NotAVegetable VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(vendor/spdlog/include)
+include_directories(src)
 
 add_library(
         NotAVegetable
