--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ add_library(
         src/NotAVegetable/Application.cpp
         src/NotAVegetable/Log.cpp
         src/Platform/MacOS/MacOSWindow.cpp
+        src/NotAVegetable/Layer.cpp
+        src/NotAVegetable/LayerStack.cpp
 )
 
 add_subdirectory(vendor/GLFW)
